crates/herder-tui/src/views/snapshots/herder_tui__views__terminals__tests__a_member_sees_terminals_are_owner_only.snap
---
source: crates/herder-tui/src/views/terminals.rs
expression: "render(&mut app, 80, 8).backend()"
---
"┌ sessions ──────────────────┐┌────────────────────────────────────────────────┐"
"│● box (4)                   ││                                                │"
"│ needs you ▾ app · herd… (2)││                                                │"
"│ running   └ write the tests││       Select a session and press Enter.        │"
"│ error     └ document it    ││                                                │"
"│ idle      app · herder/fix…││                                                │"
"└────────────────────────────┘└────────────────────────────────────────────────┘"
" terminals are owner-only                                        ? help  q quit "
