crates/herder-tui/src/views/snapshots/herder_tui__views__terminals__tests__an_exited_terminal_is_reported.snap
---
source: crates/herder-tui/src/views/terminals.rs
expression: "render(&mut app, 80, 8).backend()"
---
" herder                                                              inbox 0  + "
"┌ sessions ──────────────────┐┌────────────────────────────────────────────────┐"
"│● box (4)                   ││                                                │"
"│ needs you ▾ app · herd… (2)││                                                │"
"│ running   └ write the tests││       Select a session and press Enter.        │"
"│ error     └ document it    ││                                                │"
"└────────────────────────────┘└────────────────────────────────────────────────┘"
" terminal exited with 1                                          ? help  q quit "
