crates/herder-tui/src/views/snapshots/herder_tui__views__terminals__tests__the_picker_offers_a_new_terminal_and_the_open_ones.snap
---
source: crates/herder-tui/src/views/terminals.rs
expression: "render(&mut app, 80, 14).backend()"
---
" herder  ┌ terminals · app · api ────────────────────────────── esc ┐           "
"         │                                                          │           "
" machines│   + new terminal                                         │           "
"  ◉ box  │                                                          │           "
"▶   ├ ◉ a│  open shells                                          2  │           "
"    │ ├ ●│ ▶ $ terminal t1                                          │           "
" ────────│   $ terminal t3                                          │           "
" attentio│                                                          │           "
"  ◉ api ·│  enter attach  esc close                                 │here       "
"  ✗ docum│                                                          │           "
" ────────└──────────────────────────────────────────────────────────┘           "
" + new            ≡ menu │                                                      "
"─────────────────────────┴───────────────────────────────────────────────────── "
" esc close                                                               ● box  "
